[tool.towncrier]
name = "SBART"
package = "SBART"
directory = "newsfragments/"
filename = "docs/NEWS.rst"
issue_format = "`#{issue} <https://github.com/iastro-pt/sBART/issues/{issue}>`_"
underlines = "~~~"
template = "towncrier_template.rst"

[tool.towncrier.fragment.feature]
[tool.towncrier.fragment.break]
[tool.towncrier.fragment.bugfix]

[tool.towncrier.fragment.misc]
showcontent = true


[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]


[tool.ruff]
line-length = 100
indent-width = 4

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"
